# QOptCraft

./: .gitignore  .gitlab-ci.yml  BellAncillary.py  LICENSE  PKG-INFO  README.md  README.txt  high_order_JS_map.py  pyproject.toml  setup.cfg  setup.py  test_write_basis.py
QOptCraft/: __init__.py  _version.py  config.py  input_control.py  main.py  mat_inner_product.py  optic_devices.py  photon_comb_basis.py  qoptcraft.py  read_matrix.py  recur_factorial.py  setup.py  unitary.py  write_initial_matrix.py
QOptCraft/API/: _2_Get_U_matrix_of_photon_system_evolution.py  _2_aux_a_computation_time_evolutions_comparison.py  _2_aux_b_logarithm_algorithms_equalities.py  _2_aux_c_logarithm_algorithms_timesanderror.py  _3_Get_S_from_U_Inverse_problem.py  _4_toponogov_theorem_for_uncraftable_matrices_U.py  _5_Quasiunitary_S_with_or_without_loss_builder.py  _6_schmidt_entanglement_measurement_of_states.py  _7_generators.py  __init__.py  logarithms.py  main.py  main_api.py  unitary_decomp.py
QOptCraft/Main_Code/: _0_FullAlgorithm.py  _1_Unitary_matrix_U_builder.py  _2_Get_U_matrix_of_photon_system_evolution.py  _2_aux_a_computation_time_evolutions_comparison.py  _2_aux_b_logarithm_algorithms_equalities.py  _2_aux_c_logarithm_algorithms_timesanderror.py  _3_Get_S_from_U_Inverse_problem.py  _4_toponogov_theorem_for_uncraftable_matrices_U.py  _5_Quasiunitary_S_with_or_without_loss_builder.py  _6_schmidt_entanglement_measurement_of_states.py  _7_generators.py  _9_friendly_logarithm_algorithms.py  __init__.py
QOptCraft/Phase1_Aux/: Tmn.py  _1_U_decomposition.py  _1_U_decomposition_Reck.py  _1_U_recomposition.py  _1_U_recomposition_Reck.py  __init__.py
QOptCraft/Phase2_Aux/: _2_1st_evolution_method.py  _2_2nd_evolution_method.py  _2_3rd_evolution_method.py  _2_creation_and_destruction_operators.py  _2_logarithm_algorithms.py  _2_photon_input.py  __init__.py
QOptCraft/Phase3_Aux/: _3_S_rebuild.py  _3_permutation_matrix.py  _3_u_m_algebra_and_image_subalgebra.py  _3_verification_of_solution_existence.py  __init__.py
QOptCraft/_legacy/: main.py  (+10 more)
Test examples/: 3_vectors_in_Fock_basis_for_Schmidt_measurement.txt  S_dim6.txt  S_dim6_D.txt  S_dim6_TmnList.txt  T_dim2x2.txt  ex1_Evol4phMatrix2dimU.py  ex2_Build3dimQFTMatrix.py  ex3_QuaSystemfrom2x3dimT.py  ex4_Schmidt_rank_of_vectors.py  exArt1_Build6dimQFTMatrix.py  exArt2_TwoQuaSystems.py  exArt3_1EntangMatrix.py  exArt3_2MstateEvaluation.py  exArt4SchmidtExamples.py  exArt5MatrixRowsTest.py  exArt5MatrixRowsTest.txt  exArt5MatrixRowsTest_viaSchmidtStateFunction.py
docs/: mkdocs.yml
entanglement/: _6_basis_manipulations.py
examples/: S_dim6_TmnList.txt  article.ipynb  chernikov.ipynb  evolution.ipynb  ex1_Evol4phMatrix2dimU.py  ex2_Build3dimQFTMatrix.py  ex4_Schmidt_rank_of_vectors.py  exArt1_Build6dimQFTMatrix.py  exArt2_TwoQuaSystems.py  exArt3_1EntangMatrix.py  exArt3_2MstateEvaluation.py  exArt4SchmidtExamples.py  exArt5MatrixRowsTest.py  exArt5MatrixRowsTest_viaSchmidtStateFunction.py  example.ipynb  example_optimization.ipynb  forbidden_transitions.ipynb  m2n2v2.ipynb  m2n3.ipynb  optical_decomp.ipynb  pruebas.ipynb  spectral_invariant.ipynb  state.ipynb  topogonov.ipynb  toponogov.ipynb
qoptcraft/: __init__.py  _version.py  config.py  utils.py
scripts/: BellAncillary.py  test_write_basis.py
tests/: conftest.py  test_algebra_basis.py  test_can_transition.py  test_evolution.py  test_gram_schmidt.py  test_invariant.py  test_photon_basis.py  test_photon_hamiltonian.py  test_sparse_basis_generator.py  test_state.py  test_topogonov.py  test_toponogov.py
(+495 files in other folders)
